[gd_scene load_steps=17 format=2]

[ext_resource path="res://Fonts/Bold.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/Weapon1.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Weapon2.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Weapon4.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Weapon3.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Back.gd" type="Script" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -590.0
margin_top = -310.0
margin_right = 590.0
margin_bottom = 310.0
rect_min_size = Vector2( 1180, 620 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 1180.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[u]Weapons & Equipment[/u]"
text = "Weapons & Equipment"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 1180.0
margin_bottom = 43.0

[node name="Name" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 300.0
margin_bottom = 19.0
rect_min_size = Vector2( 300, 0 )
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
editable = false
placeholder_text = "Name"

[node name="Type" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 304.0
margin_right = 504.0
margin_bottom = 19.0
rect_min_size = Vector2( 200, 0 )
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
editable = false
placeholder_text = "Type"

[node name="Strength" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 508.0
margin_right = 628.0
margin_bottom = 19.0
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
editable = false
placeholder_text = "Strength"

[node name="Attacks" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 632.0
margin_right = 752.0
margin_bottom = 19.0
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
editable = false
placeholder_text = "Attacks"

[node name="Shots" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 756.0
margin_right = 956.0
margin_bottom = 19.0
rect_min_size = Vector2( 200, 0 )
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
editable = false
placeholder_text = "Shots"

[node name="Efr" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 960.0
margin_right = 1080.0
margin_bottom = 19.0
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
editable = false
placeholder_text = "Efr"

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 47.0
margin_right = 1180.0
margin_bottom = 181.0
script = ExtResource( 5 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer3"]
margin_right = 1180.0
margin_bottom = 19.0

[node name="Name" type="LineEdit" parent="VBoxContainer/VBoxContainer3/HBoxContainer2"]
margin_right = 300.0
margin_bottom = 19.0
rect_min_size = Vector2( 300, 0 )
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "-"

[node name="Type" type="LineEdit" parent="VBoxContainer/VBoxContainer3/HBoxContainer2"]
margin_left = 304.0
margin_right = 504.0
margin_bottom = 19.0
rect_min_size = Vector2( 200, 0 )
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "-"

[node name="Strength" type="LineEdit" parent="VBoxContainer/VBoxContainer3/HBoxContainer2"]
margin_left = 508.0
margin_right = 628.0
margin_bottom = 19.0
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "(+0)"

[node name="Attacks" type="LineEdit" parent="VBoxContainer/VBoxContainer3/HBoxContainer2"]
margin_left = 632.0
margin_right = 752.0
margin_bottom = 19.0
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "(0/0)"

[node name="Shots" type="LineEdit" parent="VBoxContainer/VBoxContainer3/HBoxContainer2"]
margin_left = 756.0
margin_right = 956.0
margin_bottom = 19.0
rect_min_size = Vector2( 200, 0 )
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "[0-0-0]"

[node name="Efr" type="LineEdit" parent="VBoxContainer/VBoxContainer3/HBoxContainer2"]
margin_left = 960.0
margin_right = 1080.0
margin_bottom = 19.0
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "[0]"

[node name="Comments" type="LineEdit" parent="VBoxContainer/VBoxContainer3"]
margin_top = 23.0
margin_right = 1180.0
margin_bottom = 42.0
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 1 )
placeholder_text = "[Comments / Requirements / Special Rules]"

[node name="Line2" type="LineEdit" parent="VBoxContainer/VBoxContainer3"]
margin_top = 46.0
margin_right = 1180.0
margin_bottom = 65.0
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 1 )
placeholder_text = "[Description]"

[node name="Line3" type="LineEdit" parent="VBoxContainer/VBoxContainer3"]
margin_top = 69.0
margin_right = 1180.0
margin_bottom = 88.0
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 1 )

[node name="Line4" type="LineEdit" parent="VBoxContainer/VBoxContainer3"]
margin_top = 92.0
margin_right = 1180.0
margin_bottom = 111.0
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 1 )

[node name="Line5" type="LineEdit" parent="VBoxContainer/VBoxContainer3"]
margin_top = 115.0
margin_right = 1180.0
margin_bottom = 134.0
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 185.0
margin_right = 1180.0
margin_bottom = 319.0
script = ExtResource( 2 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_right = 1180.0
margin_bottom = 19.0

[node name="Name" type="LineEdit" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 300.0
margin_bottom = 19.0
rect_min_size = Vector2( 300, 0 )
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "-"

[node name="Type" type="LineEdit" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 304.0
margin_right = 504.0
margin_bottom = 19.0
rect_min_size = Vector2( 200, 0 )
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "-"

[node name="Strength" type="LineEdit" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 508.0
margin_right = 628.0
margin_bottom = 19.0
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "(+0)"

[node name="Attacks" type="LineEdit" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 632.0
margin_right = 752.0
margin_bottom = 19.0
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "(0/0)"

[node name="Shots" type="LineEdit" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 756.0
margin_right = 956.0
margin_bottom = 19.0
rect_min_size = Vector2( 200, 0 )
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "[0-0-0]"

[node name="Efr" type="LineEdit" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 960.0
margin_right = 1080.0
margin_bottom = 19.0
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "[0]"

[node name="Comments" type="LineEdit" parent="VBoxContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 1180.0
margin_bottom = 42.0
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 1 )
placeholder_text = "[Comments / Requirements / Special Rules]"

[node name="Line2" type="LineEdit" parent="VBoxContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 1180.0
margin_bottom = 65.0
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 1 )
placeholder_text = "[Description]"

[node name="Line3" type="LineEdit" parent="VBoxContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 1180.0
margin_bottom = 88.0
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 1 )

[node name="Line4" type="LineEdit" parent="VBoxContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 1180.0
margin_bottom = 111.0
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 1 )

[node name="Line5" type="LineEdit" parent="VBoxContainer/VBoxContainer"]
margin_top = 115.0
margin_right = 1180.0
margin_bottom = 134.0
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 1 )

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 323.0
margin_right = 1180.0
margin_bottom = 457.0
script = ExtResource( 3 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2"]
margin_right = 1180.0
margin_bottom = 19.0

[node name="Name" type="LineEdit" parent="VBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_right = 300.0
margin_bottom = 19.0
rect_min_size = Vector2( 300, 0 )
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "-"

[node name="Type" type="LineEdit" parent="VBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 304.0
margin_right = 504.0
margin_bottom = 19.0
rect_min_size = Vector2( 200, 0 )
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "-"

[node name="Strength" type="LineEdit" parent="VBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 508.0
margin_right = 628.0
margin_bottom = 19.0
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "(+0)"

[node name="Attacks" type="LineEdit" parent="VBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 632.0
margin_right = 752.0
margin_bottom = 19.0
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "(0/0)"

[node name="Shots" type="LineEdit" parent="VBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 756.0
margin_right = 956.0
margin_bottom = 19.0
rect_min_size = Vector2( 200, 0 )
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "[0-0-0]"

[node name="Efr" type="LineEdit" parent="VBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 960.0
margin_right = 1080.0
margin_bottom = 19.0
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "[0]"

[node name="Comments" type="LineEdit" parent="VBoxContainer/VBoxContainer2"]
margin_top = 23.0
margin_right = 1180.0
margin_bottom = 42.0
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 1 )
placeholder_text = "[Comments / Requirements / Special Rules]"

[node name="Line2" type="LineEdit" parent="VBoxContainer/VBoxContainer2"]
margin_top = 46.0
margin_right = 1180.0
margin_bottom = 65.0
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 1 )
placeholder_text = "[Description]"

[node name="Line3" type="LineEdit" parent="VBoxContainer/VBoxContainer2"]
margin_top = 69.0
margin_right = 1180.0
margin_bottom = 88.0
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 1 )

[node name="Line4" type="LineEdit" parent="VBoxContainer/VBoxContainer2"]
margin_top = 92.0
margin_right = 1180.0
margin_bottom = 111.0
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 1 )

[node name="Line5" type="LineEdit" parent="VBoxContainer/VBoxContainer2"]
margin_top = 115.0
margin_right = 1180.0
margin_bottom = 134.0
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 1 )

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 461.0
margin_right = 1180.0
margin_bottom = 595.0
script = ExtResource( 4 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer4"]
margin_right = 1180.0
margin_bottom = 19.0

[node name="Name" type="LineEdit" parent="VBoxContainer/VBoxContainer4/HBoxContainer2"]
margin_right = 300.0
margin_bottom = 19.0
rect_min_size = Vector2( 300, 0 )
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "-"

[node name="Type" type="LineEdit" parent="VBoxContainer/VBoxContainer4/HBoxContainer2"]
margin_left = 304.0
margin_right = 504.0
margin_bottom = 19.0
rect_min_size = Vector2( 200, 0 )
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "-"

[node name="Strength" type="LineEdit" parent="VBoxContainer/VBoxContainer4/HBoxContainer2"]
margin_left = 508.0
margin_right = 628.0
margin_bottom = 19.0
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "(+0)"

[node name="Attacks" type="LineEdit" parent="VBoxContainer/VBoxContainer4/HBoxContainer2"]
margin_left = 632.0
margin_right = 752.0
margin_bottom = 19.0
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "(0/0)"

[node name="Shots" type="LineEdit" parent="VBoxContainer/VBoxContainer4/HBoxContainer2"]
margin_left = 756.0
margin_right = 956.0
margin_bottom = 19.0
rect_min_size = Vector2( 200, 0 )
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "[0-0-0]"

[node name="Efr" type="LineEdit" parent="VBoxContainer/VBoxContainer4/HBoxContainer2"]
margin_left = 960.0
margin_right = 1080.0
margin_bottom = 19.0
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "[0]"

[node name="Comments" type="LineEdit" parent="VBoxContainer/VBoxContainer4"]
margin_top = 23.0
margin_right = 1180.0
margin_bottom = 42.0
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 1 )
placeholder_text = "[Comments / Requirements / Special Rules]"

[node name="Line2" type="LineEdit" parent="VBoxContainer/VBoxContainer4"]
margin_top = 46.0
margin_right = 1180.0
margin_bottom = 65.0
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 1 )
placeholder_text = "[Description]"

[node name="Line3" type="LineEdit" parent="VBoxContainer/VBoxContainer4"]
margin_top = 69.0
margin_right = 1180.0
margin_bottom = 88.0
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 1 )

[node name="Line4" type="LineEdit" parent="VBoxContainer/VBoxContainer4"]
margin_top = 92.0
margin_right = 1180.0
margin_bottom = 111.0
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 1 )

[node name="Line5" type="LineEdit" parent="VBoxContainer/VBoxContainer4"]
margin_top = 115.0
margin_right = 1180.0
margin_bottom = 134.0
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 1 )

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 599.0
margin_right = 1180.0
margin_bottom = 624.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_pressed = Color( 0.517647, 0.517647, 0.517647, 1 )
text = "Armor"
flat = true
align = 0
[connection signal="text_changed" from="VBoxContainer/VBoxContainer/HBoxContainer2/Name" to="VBoxContainer/VBoxContainer" method="_on_Name_text_changed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer/HBoxContainer2/Type" to="VBoxContainer/VBoxContainer" method="_on_Type_text_changed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer/HBoxContainer2/Strength" to="VBoxContainer/VBoxContainer" method="_on_Strength_text_changed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer/HBoxContainer2/Attacks" to="VBoxContainer/VBoxContainer" method="_on_Attacks_text_changed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer/HBoxContainer2/Shots" to="VBoxContainer/VBoxContainer" method="_on_Shots_text_changed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer/HBoxContainer2/Efr" to="VBoxContainer/VBoxContainer" method="_on_Efr_text_changed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer/Comments" to="VBoxContainer/VBoxContainer" method="_on_Comments_text_changed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer/Line2" to="VBoxContainer/VBoxContainer" method="_on_Line2_text_changed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer/Line3" to="VBoxContainer/VBoxContainer" method="_on_Line3_text_changed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer/Line4" to="VBoxContainer/VBoxContainer" method="_on_Line4_text_changed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer/Line5" to="VBoxContainer/VBoxContainer" method="_on_Line5_text_changed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer2/HBoxContainer2/Name" to="VBoxContainer/VBoxContainer2" method="_on_Name_text_changed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer2/HBoxContainer2/Type" to="VBoxContainer/VBoxContainer2" method="_on_Type_text_changed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer2/HBoxContainer2/Strength" to="VBoxContainer/VBoxContainer2" method="_on_Strength_text_changed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer2/HBoxContainer2/Attacks" to="VBoxContainer/VBoxContainer2" method="_on_Attacks_text_changed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer2/HBoxContainer2/Shots" to="VBoxContainer/VBoxContainer2" method="_on_Shots_text_changed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer2/HBoxContainer2/Efr" to="VBoxContainer/VBoxContainer2" method="_on_Efr_text_changed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer2/Comments" to="VBoxContainer/VBoxContainer2" method="_on_Line1_text_changed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer2/Line2" to="VBoxContainer/VBoxContainer2" method="_on_Line2_text_changed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer2/Line3" to="VBoxContainer/VBoxContainer2" method="_on_Line3_text_changed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer2/Line4" to="VBoxContainer/VBoxContainer2" method="_on_Line4_text_changed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer2/Line5" to="VBoxContainer/VBoxContainer2" method="_on_Line5_text_changed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
